# quick-say

./: .gitignore  AGENTS.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
docs/: README.zh-CN.md
landing/: _headers  index.html  script.js  styles.css
src/: App.tsx  i18n.ts  settings.test.ts  settings.ts  styles.css  tauriApi.ts  types.ts  voiceLevel.test.ts  voiceLevel.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  voice-overlay.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  commands.rs  errors.rs  lib.rs  main.rs  paste.rs  settings.rs  siliconflow.rs  state.rs
